variables.Variables.scala.error
Compilation error:
Variables:5: error: not found: value stepAmount
{forward(); stepAmount = stepAmount+1 }
            ^Variables:9: error: not found: value stepAmount
for (n <- 0 to stepAmount)
               ^Variables:10: error: not found: value dropBack
{dropBack();}
 ^